[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/BaseScene.gd" type="Script" id=1]
[ext_resource path="res://Scenes/WeapAffTextGen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/WeapAffDescGen.tscn" type="PackedScene" id=3]

[node name="BaseScene" type="Node2D"]
script = ExtResource( 1 )

[node name="GeneratorMode" type="OptionButton" parent="."]
margin_left = 9.0
margin_top = 8.0
margin_right = 38.0
margin_bottom = 28.0
text = "Weapon Title Affinity Generator"

[node name="WeapAffTextGen" parent="." instance=ExtResource( 2 )]
visible = false

[node name="WeapAffDescGen" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="item_selected" from="GeneratorMode" to="." method="_on_GeneratorMode_item_selected"]
